--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -5,9 +5,15 @@ Below is used for the k3s.io landing page
 * {
   box-sizing:inherit
 }
+
 html,
 body {
- font-size:10px
+ font-size:10px;
+ font-family: 'roboto', sans-serif;
+}
+
+section {
+  padding:10rem 0;
 }
 
 a {
@@ -30,6 +36,17 @@ h1 {
   margin-bottom:3rem;
   font-size:5em;
   line-height:6rem
+}
+h2 {
+  margin-bottom:3rem;
+  font-size:3em;
+  line-height:4rem;
+  text-align:center
+}
+h3 {
+  margin-bottom:3rem;
+  font-size:2.5em;
+  line-height:3.5rem
 }
 h4 {
   margin-bottom:2rem;
@@ -65,15 +82,15 @@ h6 {
  hyphens:none
 }
 
-.cncf .cncf-logo {
-    display: block;
-    width: 300px;
-    margin: auto;
-    padding-bottom: 2rem;
-  }
-  .cncf p {
-    font-size: 22px;
-  }
+.cncf .cncfLogo {
+  display: block;
+  width: 300px;
+  margin: auto;
+  padding-bottom: 2rem;
+}
+.cncf p {
+  font-size: 22px;
+}
 
 .textCenter {
   text-align: center;
@@ -102,6 +119,28 @@ h6 {
   grid-row:2/span 4;
   grid-column:1/span 6;
   color:var(--dark)
+}
+
+.getStarted {
+  display:grid;
+  grid-template-columns:repeat(6,1fr);
+  padding:0;
+  position:relative
+ }
+
+.getStarted .white {
+  background:var(--light);
+  grid-row:2/span 4;
+  grid-column:2/span 4;
+  z-index:2;
+  box-shadow:rgba(51,49,59,.5) 0 0 20px;
+  padding:5rem
+}
+
+.getStarted .bgPrimary {
+  grid-row:5/span 3;
+  grid-column:1/span 6;
+  padding:20rem 0 5rem
 }
 
 .folder h4 {
