Remove custom footer, tweak colors
Signed-off-by: Derek Nola <derek.nola@suse.com>

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -58,6 +58,7 @@
   --ifm-color-primary-light: #ffcd38;
   --ifm-color-primary-lighter: #ffd146;
   --ifm-color-primary-lightest: #ffdb71;
+  --ifm-color-secondary-dark: #054a6e;
   --ifm-color-secondary: #06527a;
   --ifm-color-secondary-light: #075a86;
   --light            : #33313b;
