--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -103,39 +103,29 @@ hr {
 }
 
 .btn.navbar__github {
-  display: inline-block;
   font-weight: 400;
-  color: #212529;
+  color: #fff!important;
   text-align: center;
-  vertical-align: middle;
   user-select: none;
-  background-color: initial;
-  border: 2px solid transparent;
-  padding: .375rem .75rem;
-  font-size: 1rem;
-  line-height: 1.66;
-  border-radius: 3px;
-  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-}
-
-a.btn.navbar__github {
+  background-color: #384745;
   border: 2px solid transparent;
   padding: 8px 20px 7px 47px;
   font-size: 1rem;
   line-height: 1.66;
-  font-weight: 400;
+  border-radius: 3px;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  border-color: #384745;
+  box-shadow: inset 0 1px rgb(255 255 255 / 15%), 0 1px 1px rgb(0 0 0 / 8%);
   position: relative;
   font-family: poppins,sans-serif;
   text-decoration: none;
-  align-items: center;
-  border-radius: 3px;
 }
 
 .clear-btn {
   padding: 100px;
 }
 
-.btn-secondary.navbar__github:hover {
+a.btn.navbar__github:hover {
   color: #fff;
   background-color: #273230;
   border-color: #222a29;
@@ -151,15 +141,17 @@ a.btn.navbar__github::before {
   top: 10px;
 }
 
-.icon-github.navbar__github {
-  margin-left: 20px;
+.header-github-link::before {
+  content: '';
+  width: 24px;
+  height: 24px;
+  display: flex;
+  background: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
+    no-repeat;
 }
-
-.btn-secondary.navbar__github {
-  color: #fff!important;
-  border-color: #384745;
-  background-color: #384745;
-  box-shadow: inset 0 1px rgb(255 255 255 / 15%), 0 1px 1px rgb(0 0 0 / 8%);
+[data-theme='dark'] .header-github-link::before {
+  background: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='white' d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
+    no-repeat;
 }
 
 .docusaurus-highlight-code-line {
@@ -169,3 +161,11 @@ a.btn.navbar__github::before {
   padding: 0 var(--ifm-pre-padding);
 }
 
+/* Mobile */
+@media (max-width: 996px) {
+
+  /* Hide useless "Back to main menu" button */
+  .navbar-sidebar__back {
+    display: none;
+  }
+}
